test/integration/backup_syntax/stray_unrec.pal
{4,6}
program test(input,outpt);
begin
#		// error
end		// error
